# obscure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  square.cpp  triangle.cpp  triangles.cpp
include/obscure/: application_2d.h  properties.hpp
include/obscure/color/: rgba.hpp  virtual_terminal.h
include/obscure/configuration/: application_configuration.h  configuration_container.hpp  configuration_provider.h  default_configuration.h  vulkan_configuration.h
include/obscure/shape/: colored_vertex.hpp  outline.hpp  triangle.hpp
include/obscure/utilities/: name_list.h  read_file.h  stopwatch.h  version.hpp
include/obscure/vulkan/: application_context.h  buffer_array.hpp  buffer_memory.h  command_pool.h  command_sequence.h  device.h  device_memory.h  device_picker.h  fence.h  frame_buffer.h  glfw_api_context.h  (+25 more)
obscure/: CMakeLists.txt
obscure/include/obscure/: properties.hpp  stopwatch.hpp  version.hpp
obscure/include/obscure/atomic/: circular_counter.hpp
obscure/include/obscure/color/: rgba.hpp  virtual_terminal.hpp
obscure/include/obscure/configuration/: application_configuration.hpp  configuration.hpp  configuration_provider.hpp  swap_chain_configuration.hpp  vulkan_configuration.hpp
obscure/include/obscure/configuration/default/: application_configuration.hpp  configuration.hpp  vulkan_configuration.hpp
obscure/include/obscure/internal/: contains_all.hpp  glfw_vulkan_include.hpp  name_list.hpp  read_file.hpp
obscure/include/obscure/internal/vulkan/: vulkan_load.hpp
obscure/include/obscure/internal/vulkan/application_scope/: context.hpp  context_data.hpp  device.hpp  glfw_api_context.hpp  instance.hpp  queue_indices.hpp
obscure/include/obscure/internal/vulkan/frame_scope/: frame_context.hpp  render_context-pipeline.hpp  render_context.hpp
obscure/include/obscure/internal/vulkan/memory_management/: device_memory.hpp  memory_owning_buffer.hpp
obscure/include/obscure/internal/vulkan/pipeline_scope/: initialize_pipeline_collection.hpp  pipeline_collection.hpp  pipeline_layout.hpp  pipeline_references.hpp  shader_module.hpp
obscure/include/obscure/internal/vulkan/signaling/: fence.hpp  semaphore.hpp
obscure/include/obscure/internal/vulkan/window_scope/: command_pool.hpp  frame_buffer.hpp  frame_data.hpp  glfw_window.hpp  image_view.hpp  render_pass.hpp  surface.hpp  swap_chain.hpp
obscure/include/obscure/memory/: curcular_buffer.hpp
obscure/include/obscure/shape/: colored_vertex.hpp
obscure/include/obscure/templates/: integer_sizes.hpp
obscure/include/obscure/vulkan/: device_picker.hpp
obscure/include/obscure/vulkan/graphics_pipelines/: graphics_pipeline_binding_descriptors.hpp  graphics_pipeline_configuration.hpp  graphics_pipeline_context.hpp  graphics_pipeline_definition.hpp
obscure/include/obscure/vulkan/loggers/: logger.hpp  logger_collection.hpp  verbose_console_logger.hpp  verbose_csv_logger.hpp  verbose_logger.hpp
obscure/include/obscure/vulkan/memory_management/: data_transfer_batch.hpp  index_array.hpp  mapped_buffer.hpp  mapped_uniform.hpp  staged_array.hpp  staging_buffer.hpp  vertex_array.hpp
obscure/source/: stopwatch.cpp
obscure/source/configuration/: default_configuration.cpp  default_configuration_application.cpp  default_configuration_vulkan.cpp
obscure/source/internal/: name_list.cpp  read_file.cpp
obscure/source/internal/vulkan/application_scope/: context_data.cpp  device.cpp  instance.cpp  queue_indices.cpp
obscure/source/internal/vulkan/frame_scope/: frame_context.cpp
obscure/source/internal/vulkan/memory_management/: device_memory.cpp  memory_owning_buffer.cpp
obscure/source/internal/vulkan/pipeline_scope/: pipeline_layout.cpp  shader_module.cpp
obscure/source/internal/vulkan/signaling/: fence.cpp  semaphore.cpp
obscure/source/internal/vulkan/window_scope/: command_pool.cpp  frame_buffer.cpp  frame_data.cpp  glfw_window.cpp  image_view.cpp  render_pass.cpp  surface.cpp  swap_chain.cpp  swap_chain_configuration.cpp
obscure/source/vulkan/: device_picker.cpp
obscure/source/vulkan/graphics_pipelines/: graphics_pipeline_configuration.cpp  graphics_pipeline_context.cpp
obscure/source/vulkan/loggers/: logger.cpp  logger_collection.cpp  verbose_console_logger.cpp  verbose_csv_logger.cpp  verbose_logger.cpp
obscure/source/vulkan/memory_management/: .staging_buffer.cpp  data_transfer_batch.cpp  mapped_buffer.cpp
resources/: CMakeLists.txt
resources/shaders/: CMakeLists.txt  static.vert
src/: CMakeLists.txt  application_2d.cpp
src/color/: virtual_terminal.cpp
src/default_configuration/: configuration.cpp
src/utilities/: name_list.cpp  read_file.cpp  stopwatch.cpp
src/vulkan/: application_context.cpp  buffer_memory.cpp  comman_pool.cpp  command_sequence.cpp  device.cpp  device_memory.cpp  device_picker.cpp  fence.cpp  frame_buffer.cpp  glfw_api_context.cpp  graphics_pipeline_configuration.cpp  graphics_queue.cpp  image_view.cpp  instance.cpp  logger.cpp  logger_collection.cpp  owning_buffer.cpp  pipeline_collection.cpp  pipeline_layout.cpp  present_queue.cpp  queue_indices.cpp  render_context.cpp  render_pass.cpp  semaphore.cpp  shader_module.cpp  surface.cpp  swap_chain.cpp  swap_chain_configuration.cpp  transfer_context.cpp  vulkan_context.cpp  window.cpp  window_reference.cpp
src/vulkan/pipeline_configuration/: colored_triangle_list_configuration.cpp  graphics_pipeline_configuration.cpp  static_triangle_configuration.cpp
(+4 files in other folders)
